s3/errors.txt
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
error1.c:6:1: error: expected '}'
^
error1.c:4:1: note: to match this '{'
{
^
1 error generated.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'great5.c.txt.txt.txt.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'error1.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'great5.c.txt.txt.txt.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'Example.c', requesting installation of command line developer tools.
xcode-select: Failed to locate 'error1.c', requesting installation of command line developer tools.
